# mason

./: README.md  pyproject.toml
mason/: cli.py  convert.py  merge.py
src/mason/: chat.py  cli.py
